# kmeans_demo

./: CMakeLists.txt
doc/: doxygen.conf
include/: geometry.h  kmeans.h  types.h
src/: .main.cpp.swp  geometry.cpp  kmeans.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/include/: test_geometry_ops.h  test_kmeans.h  test_suite_1.h
